logs/buildbot-gitlab.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/buildbot'...
Listing './lib/python3.5/site-packages/buildbot/gitlab'...
Listing './lib/python3.5/site-packages/buildbot/gitlab/api'...
Compiling './lib/python3.5/site-packages/buildbot/gitlab/api/resources.py'...
***   File "./lib/python3.5/site-packages/buildbot/gitlab/api/resources.py", line 236
    print 'exception %r' % GetExceptionDetail()
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/buildbot/gitlab/monkey_patches'...
Listing './lib/python3.5/site-packages/buildbot/gitlab/monkey_patches/buildbot'...
Listing './lib/python3.5/site-packages/buildbot/gitlab/monkey_patches/buildbot/process'...
Listing './lib/python3.5/site-packages/buildbot/gitlab/monkey_patches/buildbot/process/build'...
Listing './lib/python3.5/site-packages/buildbot/gitlab/monkey_patches/buildbot/status'...
Listing './lib/python3.5/site-packages/buildbot/gitlab/monkey_patches/buildbot/status/progress'...
Listing './lib/python3.5/site-packages/buildbot_gitlab-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
